--- a/index.html
+++ b/index.html
@@ -56,15 +56,29 @@
     <!-- This Sticky Menu Can be added anywhere inside the Body -->
     <!-- Sticky Menu for mobile screen -->
     <nav class="sticky-nav">
+        <ul class="sticky-nav__list">
         <!-- Toggle Menu button -->
-        <button type="button" class="toggle-menu-btn" id="mobile-menu-toggler">
-            <span class="icon">
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
-            <span>Menu</span>
-        </button>
+            <li class="sticky-nav__list-item menu-btn-wrapper">
+                <button type="button" class="toggle-menu-btn" id="mobile-menu-toggler">
+                    <span class="icon">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </span>
+                    <span>Menu</span>
+                </button>
+            </li>
+
+            <!-- Home -->
+            <li class="sticky-nav__list-item">
+                <a href="#" class="sticky-nav__list-link">
+                    <span class="sticky-nav__list-icon">
+                        <svg id="icon_svg_home_parent" xmlns="http://www.w3.org/2000/svg" width="73" height="73" viewBox="0 0 73 73"><path id="icon_svg_home" d="M45.36,72.57V50.26a4.53,4.53,0,0,0-3.62-4.56,5.14,5.14,0,0,0-1-.1H32a4.52,4.52,0,0,0-4.56,3.66,5.12,5.12,0,0,0-.1,1.1q0,10.88,0,21.74v.48H13.93a4.48,4.48,0,0,1-4.45-3.45,3.54,3.54,0,0,1-.11-.85V41.09H4.86a4.19,4.19,0,0,1-4-2.31,4.28,4.28,0,0,1,.24-4.69A16,16,0,0,1,2.93,32q14.4-14.4,28.83-28.78A17.52,17.52,0,0,1,33.45,1.7a4.51,4.51,0,0,1,6,.15c1,.89,2,1.84,2.9,2.79,2.4,2.37,4.78,4.76,7.17,7.15l.32.3c0-.15,0-.24,0-.34,0-.76,0-1.52,0-2.29a4.47,4.47,0,0,1,3.65-4.23,5.27,5.27,0,0,1,.79-.07H59a4.45,4.45,0,0,1,4.27,3.65,4.54,4.54,0,0,1,.07.82q0,7.8,0,15.6a.74.74,0,0,0,.25.6c2.27,2.26,4.54,4.52,6.78,6.8a9.61,9.61,0,0,1,1.31,1.61,4.47,4.47,0,0,1-3.22,6.83,11.14,11.14,0,0,1-1.53,0H63.33v.45q0,13.31,0,26.6a4.49,4.49,0,0,1-4.41,4.42H45.36Z"/></svg>
+                    </span>
+                    <span>Home</span>
+                </a>
+            </li>
+        </ul>
 
         <ul class="sticky-nav__list">
             <!-- Link Search -->
@@ -79,16 +93,6 @@
                 </a>
             </li>
             -->
-
-            <!-- Home -->
-            <li class="sticky-nav__list-item">
-                <a href="#" class="sticky-nav__list-link">
-                    <span class="sticky-nav__list-icon">
-                        <svg id="icon_svg_home_parent" xmlns="http://www.w3.org/2000/svg" width="73" height="73" viewBox="0 0 73 73"><path id="icon_svg_home" d="M45.36,72.57V50.26a4.53,4.53,0,0,0-3.62-4.56,5.14,5.14,0,0,0-1-.1H32a4.52,4.52,0,0,0-4.56,3.66,5.12,5.12,0,0,0-.1,1.1q0,10.88,0,21.74v.48H13.93a4.48,4.48,0,0,1-4.45-3.45,3.54,3.54,0,0,1-.11-.85V41.09H4.86a4.19,4.19,0,0,1-4-2.31,4.28,4.28,0,0,1,.24-4.69A16,16,0,0,1,2.93,32q14.4-14.4,28.83-28.78A17.52,17.52,0,0,1,33.45,1.7a4.51,4.51,0,0,1,6,.15c1,.89,2,1.84,2.9,2.79,2.4,2.37,4.78,4.76,7.17,7.15l.32.3c0-.15,0-.24,0-.34,0-.76,0-1.52,0-2.29a4.47,4.47,0,0,1,3.65-4.23,5.27,5.27,0,0,1,.79-.07H59a4.45,4.45,0,0,1,4.27,3.65,4.54,4.54,0,0,1,.07.82q0,7.8,0,15.6a.74.74,0,0,0,.25.6c2.27,2.26,4.54,4.52,6.78,6.8a9.61,9.61,0,0,1,1.31,1.61,4.47,4.47,0,0,1-3.22,6.83,11.14,11.14,0,0,1-1.53,0H63.33v.45q0,13.31,0,26.6a4.49,4.49,0,0,1-4.41,4.42H45.36Z"/></svg>
-                    </span>
-                    <span>Home</span>
-                </a>
-            </li>
 
             <!-- Link 2 -->
             <li class="sticky-nav__list-item">
