spacing made equal

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <nav class="sticky-nav">
         <ul class="sticky-nav__list">
         <!-- Toggle Menu button -->
-            <li class="sticky-nav__list-item menu-btn-wrapper">
+            <li class="sticky-nav__list-item">
                 <button type="button" class="toggle-menu-btn" id="mobile-menu-toggler">
                     <span class="icon">
                         <span></span>
@@ -78,9 +78,6 @@
                     <span>Home</span>
                 </a>
             </li>
-        </ul>
-
-        <ul class="sticky-nav__list">
             <!-- Link Search -->
 
              <!--  
