--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                     </a>
 
                     <!-- New Links -->
-                    <div class="hide-for-medium-down header-top-icons-block desktop-social-link">
+                    <div
+                        class="hide-for-medium-down header-top-icons-block desktop-social-link left-social-links"
+                    >
                         <div class="social-block-link">
                             <a href="#">
                                 <svg
