header items justified

--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
                     </a>
 
                     <!-- New Links -->
-                    <div
-                        class="hide-for-medium-down header-top-icons-block desktop-social-link left-social-links"
-                    >
+                    <div class="hide-for-medium-down header-top-icons-block desktop-social-link">
                         <div class="social-block-link">
                             <a href="#">
                                 <svg
